--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,26 +1,25 @@
-@import './variables.scss';
-@import './mixin.scss';
+@use './variables.scss' as *;
+
 
 html,
 body,
 #app {
   color: #333333;
   font-family: -apple-system,
-  BlinkMacSystemFont,
-  'Source Han Sans SC',
-  'Source Han Sans CN',
-  'DengXian',
-  'Microsoft YaHei',
-  'Segoe UI',
-  'Roboto',
-  'Oxygen',
-  'Ubuntu',
-  'Cantarell',
-  'Fira Sans',
-  'Droid Sans',
-  'Helvetica Neue',
-  sans-serif;
-  background-color: $background-color;
+    BlinkMacSystemFont,
+    'Source Han Sans SC',
+    'Source Han Sans CN',
+    'DengXian',
+    'Microsoft YaHei',
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
   width: 100%;
   height: 100%;
 }
@@ -30,12 +29,16 @@ body,
   height: 100%;
 }
 
+.root-class {
+  margin: 0 auto
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
-:root{
+:root {
   --van-tabs-bottom-bar-color: #3396fb;
-  --van-dialog-confirm-button-text-color:#3396fb;
+  --van-dialog-confirm-button-text-color: #3396fb;
 }
